# report-ingestion-platform

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  SPEC.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: celery_app.py  config.py  main.py  storage.py
backend/app/api/: admin.py  emails.py  (+9 more)
backend/migrations/: env.py
backend/profiles/: _default_dmarc_xml.json  _default_tlsrpt_json.json  acme_csv.json  acme_pdf.json  acme_xlsx.json
backend/scripts/: add_tenant.py  add_user.py  ensure_roles.py  reingest.py  requeue.py  seed.py
backend/senders/: amazon_ses.json  brevo.json  google.json  mailchimp.json  mailjet.json  microsoft365.json  sendgrid.json
backend/tests/: conftest.py  test_account.py  test_admin_api_keys.py  test_admin_domains.py  test_admin_rules.py  test_admin_tenant_alert_email.py  test_admin_user_profile.py  test_admin_users.py  test_alert_channel_email.py  test_alert_channels.py  test_alert_detectors.py  test_alert_external_ref.py  test_alert_reconciler.py  test_alert_schema.py  test_alert_sweep.py  test_alert_webhook.py  test_alerts_api.py  test_antivirus.py  test_api_key_auth.py  test_api_key_hardening.py  test_api_key_model.py  test_api_serialization.py  test_compression.py  test_desk365.py  test_detect.py  test_dmarc.py  test_email_change.py  test_headers.py  test_imap_poller.py  test_ip_intel.py  test_ip_intel_api.py  test_ip_intel_schema.py  test_mailer.py  test_metrics_dmarc.py  test_middleware_isolation.py  test_mta_sts.py  test_onboarding.py  test_passwords.py  test_pdf_ocr.py  test_persistence_summary.py  (+15 more)
(+155 files in other folders)
