[project]
name = "report-ingestion-platform"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
  # API
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "python-multipart==0.0.20",
  "pyjwt[crypto]==2.10.1",
  "passlib[bcrypt]==1.7.4",
  # DB
  "sqlalchemy==2.0.36",
  "psycopg2-binary==2.9.10",
  "alembic==1.14.0",
  # File / workers
  "celery==5.4.0",
  "redis==5.2.1",
  # Ingestion mail
  "imap-tools==1.7.4",
  # Antivirus (client clamd)
  "clamd==1.0.2",
  # Object store
  "boto3==1.35.92",
  # Parsing
  "pandas==2.2.3",
  "openpyxl==3.1.5",
  "chardet==5.2.0",
  "beautifulsoup4==4.12.3",
  "pdfplumber==0.11.4",
  # XML DMARC : parsing durci (XXE, billion laughs) — le contenu vient d'Internet
  "defusedxml==0.7.1",
  # Observabilité
  "structlog==24.4.0",
  "sentry-sdk==2.19.2",
]

[project.optional-dependencies]
ocr = ["pytesseract==0.3.13", "Pillow==11.0.0", "pdf2image==1.17.0"]
dev = ["pytest==8.3.4", "pytest-asyncio==0.25.0", "httpx==0.28.1", "ruff==0.8.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
